--- a/src/app/father/father.component.html
+++ b/src/app/father/father.component.html
@@ -1,9 +1,15 @@
 <!-- <p>father works!</p> -->
 
-<!-- <app-son [sonReceive]="messageToChild" (messageFromSon)="FatherReceives($event)"></app-son> -->
-<app-son (mensajeDelHijoEmmiter)="fatherReceives($event)" (inc)="incrementar()" (dec)="decrementar()"></app-son>
+<!-- <app-son [sonReceive]="messageToChild" (messageFromSon)="FatherReceives($event)"></app-son> 
+<app-son (mensajeDelHijoEmmiter)="fatherReceives($event)" (inc)="incrementar()" (dec)="decrementar()"></app-son>-->
 
 <!-- <h5>El mensaje recibido deel hijo es {{recibido}}</h5> -->
 
 
-<p>{{valorContador}}</p>
+<!--  <p>{{valorContador}}</p> -->
+
+
+
+<h1 appSiblingsStyle>{{nombreHermanoGrande}}</h1>
+<button type="button" (click)="saludar()">Saludar</button>
+<button type="button" (click)="preguntar()">Preguntar por hijo</button>
