first part of angular

--- a/src/app/father/father.component.html
+++ b/src/app/father/father.component.html
@@ -10,6 +10,6 @@
 
 
 
-<h1 appSiblingsStyle>{{nombreHermanoGrande}}</h1>
+<h1> {{nombreHermanoGrande | myCustomPipe}}</h1>
 <button type="button" (click)="saludar()">Saludar</button>
 <button type="button" (click)="preguntar()">Preguntar por hijo</button>
