--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page">Home</a>
+          <a class="nav-link" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Products</a>
+          <a class="nav-link" routerLink="products">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Contact</a>
+          <a class="nav-link" routerLink="contact">Contact</a>
         </li>
+        
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
