--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import "~bootstrap-icons/font/bootstrap-icons.min.css";
 /* You can add global styles to this file, and also import other style files */
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -36,3 +37,6 @@
     visibility: hidden;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
